2009-03-31  Jim Meyering  <meyering@redhat.com>

	Avoid test failure due to paranoid TAR_OPTIONS envvar setting.
	* tests/txinfo18.test: Don't let a TAR_OPTIONS=--keep-old-files
	environment variable setting cause test failure.  Fixed in
	texi2dvi 4.13.

	Use more common spelling in diagnostic: s/canonic/canonical/.
	* automake.in (check_typos): s/canonic/canonical/.

2009-04-01  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* Makefile.am (maintainer-check): Do not complain if DESTDIR is
	passed as argument to `make'.

	* doc/automake.texi (Cross-Compilation): Fix underfull hbox.

	Sync auxiliary files from upstream.
	* INSTALL, lib/INSTALL, lib/config.guess, lib/config.sub,
	lib/texinfo.tex: Sync from upstream.

2009-03-28  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Ensure that empty directory variables work with empty content variables.
	This test ensures that, if both $(wheredir) and $(where_HOW) are
	the empty string, then the `install' and `uninstall' rules behave
	sanely, for several directory variables `wheredir' and several
	primaries `HOW'.
	* tests/instdir.test: New test.
	* tests/Makefile.am: Update.

2009-04-01  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Fix testsuite failures due to nonexistent `dirlist' entries.
	* tests/defs.in: When parsing `$aclocaldir/dirlist', only add
	existing directories D to aclocal `-I D' flags, as aclocal
	errors on nonexisting directories.
	Report and analysis by Andreas Schwab.

2009-03-28  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	manual: minor cleanups.
	* doc/automake.texi (Yacc and Lex): Adjust spacing in example.
	(Mixing Fortran 77 With C and C++): Drop unneeded @page breaks.

2009-03-22  Jim Meyering  <meyering@redhat.com>

	Fix a documentation typo.
	* doc/automake.texi (Headers): Clarify the note telling when it's
	better not to use noinst_HEADERS.

2009-03-09  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Relax depcomp test for MSVC to not require minuso.