@@ -1105,7 +1105,7 @@ sub handle_options
 # Return a $(variable) that contains all possible values
 # $varname can take.
 # If the VAR wasn't defined conditionally, return $(VAR).
-# Otherwise we create a am__VAR_DIST variable which contains
+# Otherwise we create an am__VAR_DIST variable which contains
 # all possible values, and return $(am__VAR_DIST).
 sub shadow_unconditionally ($$)
 {
