@@ -9509,7 +9509,7 @@ of the API@.  You should avoid using them, as they could change from one
 version to the other (even in bug fix releases, if this helps to fix a
 bug).
 
-If it turns out you need to use such a undocumented feature, contact
+If it turns out you need to use such an undocumented feature, contact
 @email{automake@@gnu.org} and try to get it documented and exercised by
 the test-suite.
 
