@@ -1,5 +1,5 @@
 #!/bin/sh
-# Copyright (C) 2002  Free Software Foundation, Inc.
+# Copyright (C) 2002, 2009  Free Software Foundation, Inc.
 #
 # This file is part of GNU Automake.
 #
@@ -44,7 +44,7 @@ $AUTOMAKE
 grep '\.o:' Makefile.in > rules
 cat rules
 
-# Here is a example of bogus output.  The rules are output several
+# Here is an example of bogus output.  The rules are output several
 # times.
 #|  .cc.o:
 #|  d.o: sub/d.cc
