@@ -1,3 +1,11 @@
+2009-04-10  Jim Meyering  <meyering@redhat.com>
+
+	Fix grammar in comments and documentation.
+	* doc/automake.texi (API versioning): Fix grammar.
+	* automake.in: Fix grammar in comment.
+	* lib/Automake/ChannelDefs.pm: Likewise.
+	* tests/ext2.test: Likewise.
+
 2009-03-31  Jim Meyering  <meyering@redhat.com>
 
 	Avoid test failure due to paranoid TAR_OPTIONS envvar setting.
